Update: Fix the alignment of <nav> and <content>

--- a/blog/static/blog/style.css
+++ b/blog/static/blog/style.css
@@ -10,7 +10,7 @@ h1, h2, h3 {
 body {
     display: flex;
     flex-direction: column;
-    /* align-items: center; */
+    align-items: center;
     background-color: var(--color-background-secondary);
     margin: 0;
 
@@ -23,16 +23,23 @@ footer {
     margin-bottom: 1rem;
 }
 
-#appbar-wrapper {
+#nav {
+    width: 100%;
     position: sticky;
     top: 0;
     background-color: #6c6c6c;
+    box-shadow: rgba(0, 0, 0, 0.2) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
+}
+
+#appbar-wrapper {
     display: flex;
     flex-direction: row;
     align-items: center;
-    width: 100%;
+    justify-content: space-between;
     color: #e8e8e8;
-    box-shadow: rgba(0, 0, 0, 0.2) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 1rem 0 1rem;
 }
 
 #header-wrapper h1 {
@@ -40,18 +47,8 @@ footer {
     color: #e8e8e8;
 }
 
-#header {
-    flex-grow: 1;
-    margin-left: 3rem;
-}
-
-
 .site-header-text {
     margin: 0;
-}
-
-#nav {
-    margin-right: 3rem;
 }
 
 .nav-list {
@@ -69,8 +66,10 @@ footer {
     display: flex;
     justify-content: center;
     gap: 2rem 2rem;
-    padding: 2.5rem 2rem 0 2rem;
+    padding: 0 1rem 0 1rem;
+    margin-top: 2rem;
     flex-grow: 1;
+    max-width: 1200px;
 }
 
 #date-parameter-wrapper {
